--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            background-image: url("./images/background.png");
+            background-image: url("background.png");
         }
 
 
@@ -64,19 +64,19 @@
         }
 
         #image1 {
-            background-image: url("./images/img1.png");
+            background-image: url("img1.png");
         }
 
         #image2 {
-            background-image: url("./images/img2.png");
+            background-image: url("img2.png");
         }
 
         #image3 {
-            background-image: url("./images/img3.png");
+            background-image: url("img3.png");
         }
 
         #image4 {
-            background-image: url("./images/img4.png");
+            background-image: url("img4.png");
         }
 
         .photo-description {
